// protoc --go_out=. --go-grpc_out=. messenger.proto

syntax = "proto3";

option go_package = "manyface.net/grpc";

package grpc;

service Messenger {
  rpc Send(SendRequest) returns(SendResponse){};
  rpc Listen(ListenRequest) returns(stream ListenResponse){};
}

message SendRequest {
  string message = 1;
  int64 connection_id = 2;
  string sender_face_id = 3;
  string receiver_face_id = 4;
}

message SendResponse { bool result = 1; }

message ListenRequest {
  int64 connection_id = 1;
  string sender_face_id = 2;
  string receiver_face_id = 3;
}

message ListenResponse {
  string content = 1;
  int64 connection_id = 2;
  string sender = 3;
  string sender_face_id = 4;
  string receiver_face_id = 5;
  int64 timestamp = 6;
}